<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <EditText
            android:id="@+id/reminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reminder_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reminderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/reminder_desc"
            android:lines="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminderTitle" />

        <TextView
            android:id="@+id/tv_select_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_add_location"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/reminder_location"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminderDescription" />

        <TextView
            android:id="@+id/selectedLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_select_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_select_location"
            tools:text="Location" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:src="@drawable/ic_save"
            app:fabSize="normal"
            app:tint="@color/white"
            app:backgroundTint="@color/purple_700"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
