<resources>
    <string name="app_name">Location Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
...
